products page: fixing the overflow of info and adding red more link

--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -8,7 +8,6 @@
   height: calc(100vh - (2 * var(--header-height)));
 }
 
-
 .products_list {
   background-color: var(--typography-color);
   display: flex;
@@ -44,7 +43,7 @@ li.product_item {
   align-items: center;
   width: 30%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: hidden;
   background-color: var(--action-color);
 }
 
@@ -65,5 +64,3 @@ li.product_item {
   height: 20%;
   font-size: calc(var(--main-font-paragraph-size) * 0.7);
 }
-
-
